# CACheckpointManager

./: code.sh  genfiles.sh  package.json  pnpm-lock.yaml  setupfe.sh  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adam_handler.rs  config_handler.rs  lib.rs  main.rs  print_handler.rs  rest_services_handler.rs  rfid_handler.rs  soap_services_handler.rs
